# simple-restaurant

./: .gitignore  Cargo.toml  README.md
src/: dbsetup.rs  handler.rs  main.rs  model.rs  repository.rs  response.rs
src/config/: app_config.toml
